# unclip

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  go.mod  go.sum
.github/workflows/: ci.yml
crates/unclip-cli/: Cargo.toml
crates/unclip-cli/src/: commands.rs  db.rs  main.rs  matching.rs  sampling.rs
crates/unclip-cli/tests/: cli.rs
crates/unclip-core/: Cargo.toml
crates/unclip-core/src/: branch.rs  error.rs  frame.rs  lib.rs  packet.rs  pattern.rs  query.rs  reference.rs  validate.rs
crates/unclip-entity/: Cargo.toml
crates/unclip-entity/src/: lib.rs
crates/unclip-entity/src/entities/: branch_o2m_values.rs  branch_o2o_values.rs  branch_references.rs  branches.rs  frame_slot_o2m_values.rs  frame_slot_o2o_values.rs  frame_slots.rs  frames.rs  mod.rs  pattern_entries.rs  prelude.rs  selection_packets.rs  usage_history.rs
crates/unclip-io/: Cargo.toml
crates/unclip-io/src/: branch_io.rs  frames.rs  lib.rs  packet.rs
crates/unclip-match/: Cargo.toml
crates/unclip-match/src/: dictionary.rs  lib.rs  matcher.rs  suggest.rs
crates/unclip-migration/: Cargo.toml
crates/unclip-migration/examples/: build_schema_db.rs
crates/unclip-migration/src/: lib.rs  m20260620_000001_create_core_tables.rs  m20260620_000002_create_pattern_entries.rs
crates/unclip-sample/: Cargo.toml
crates/unclip-sample/src/: lib.rs
crates/unclip-store/: Cargo.toml
crates/unclip-store/src/: frame_mapper.rs  frame_repository.rs  history.rs  lib.rs  mapper.rs  pattern_repository.rs  repository.rs  seaorm.rs
