[workspace]
resolver = "2"
members = [
    "crates/unclip-core",
    "crates/unclip-entity",
    "crates/unclip-migration",
    "crates/unclip-store",
    "crates/unclip-sample",
    "crates/unclip-io",
    "crates/unclip-match",
    "crates/unclip-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kozmof"]
repository = "https://github.com/kozmof/unclip"

[workspace.dependencies]
# Internal crates
unclip-core = { path = "crates/unclip-core" }
unclip-entity = { path = "crates/unclip-entity" }
unclip-migration = { path = "crates/unclip-migration" }
unclip-store = { path = "crates/unclip-store" }
unclip-sample = { path = "crates/unclip-sample" }
unclip-io = { path = "crates/unclip-io" }
unclip-match = { path = "crates/unclip-match" }

# CLI / async
clap = { version = "4", features = ["derive"] }
# A current-thread runtime is sufficient: all DB work is sequential (no
# tokio::spawn / concurrent tasks), and it avoids spawning a worker-thread pool
# per CLI invocation.
tokio = { version = "1", features = ["macros", "rt"] }

# Persistence
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "2"

# Async traits
async-trait = "0.1"

# Matching / sampling / time
daachorse = "3"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
