[workspace]
resolver = "2"
members = [
    "crates/unclip-core",
    "crates/unclip-entity",
    "crates/unclip-migration",
    "crates/unclip-store",
    "crates/unclip-sample",
    "crates/unclip-io",
    "crates/unclip-match",
    "crates/unclip-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kozmof"]
repository = "https://github.com/kozmof/unclip"

[workspace.dependencies]
# Internal crates. An explicit `version` (matching workspace.package.version)
# keeps these path deps publishable to crates.io and avoids an implicit `*`
# version, which the cargo-deny `wildcards = "deny"` supply-chain gate rejects.
unclip-core = { path = "crates/unclip-core", version = "0.1.0" }
unclip-entity = { path = "crates/unclip-entity", version = "0.1.0" }
unclip-migration = { path = "crates/unclip-migration", version = "0.1.0" }
unclip-store = { path = "crates/unclip-store", version = "0.1.0" }
unclip-sample = { path = "crates/unclip-sample", version = "0.1.0" }
unclip-io = { path = "crates/unclip-io", version = "0.1.0" }
unclip-match = { path = "crates/unclip-match", version = "0.1.0" }

# CLI / async
clap = { version = "4", features = ["derive"] }
# A current-thread runtime is sufficient: all DB work is sequential (no
# tokio::spawn / concurrent tasks), and it avoids spawning a worker-thread pool
# per CLI invocation.
tokio = { version = "1", features = ["macros", "rt"] }

# Persistence
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "2"

# Async traits
async-trait = "0.1"

# Matching / sampling / time
daachorse = "3"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
